# nautilusdb-cli

./: README.md  nautiluscli.py  pyproject.toml
lib/: api.py  cli.py  readme.md
nautiluscli/: api.py  cli.py  embedding_model.py  model.py  nautiluscli.py
src/nautiluscli/: api.py  nautiluscli.py
tests/: test_api.py
